# Project-Zero

./: LICENSE  README.MD  audio.c  audio.h  boss.c  boss.h  bullet.c  bullet.h  highScore.c  highScore.h  highscore.c  highscore.h  main.c  meson.build  pixelhelper.py  player.c  player.h  pro.sliden.ProjectZero.json  readme.md  screen.c  screen.h
